container-based/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplewebapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: samplewebapp
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: samplewebapp
    spec:
      containers:
      - image: '${#stage("Jenkins")["context"]["version"]}'
        imagePullPolicy: Always
        name: samplewebapp
        ports:
        - containerPort: 8080
